--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
   <body>
     <div class="download-container">
-    <a href="#" class="btn" id="download">Download</a>
-</div>
+      <a href="#" class="btn" id="download">Download</a>
+      <span class="title" id="title"></span>
+      <p class="description" id="description"></p>
+    </div>
     <script src="assets/js/app.js" type="text/javascript"></script>
     <script src="assets/detect.min.js" type="text/javascript"></script>
     <script>
