--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           title.innerHTML = 'You are on android'
           description.innerHTML = '<a> href: http://play.google.com?id=*'
           break;
-        case 'iOS': 
+        case 'ios': 
           button.setAttribute('href', 'https://appstore.com/')
           title.innerHTML = 'You are on iOS'
           description.innerHTML = '<a> href: https://appstore.com/'
