--- a/pages/redirect.html
+++ b/pages/redirect.html
@@ -1,6 +1,5 @@
+<script src="../assets/detect.min.js" type="text/javascript"></script>
 <script>
-    
-
     let ua = detect.parse(navigator.userAgent);
     let button = document.getElementById('download');
     let title = document.getElementById('title');
@@ -15,11 +14,9 @@
         window.location.replace("https://appstore.com/");
         break;
       case 'windows':
-        window.location.replace("#");
+        window.location.replace("https://lxpocampofrost.github.io/qr-link-prototype/");
         break;
       default: 
-        button.setAttribute('href', '#')
-        title.innerHTML = 'Unknown family of OS'
-        description.innerHTML = '<a> href: #'
+        window.location.replace("https://lxpocampofrost.github.io/qr-link-prototype/");
     }
   </script>
