--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="#" class="btn" id="download">Download</a>
       <span class="title" id="title"></span>
       <p class="description" id="description"></p>
+      <img src="assets/images/qr.png" style="width: 200px; height: 200px; margin: 24px auto 0;">
     </div>
     <script src="assets/js/app.js" type="text/javascript"></script>
     <script src="assets/detect.min.js" type="text/javascript"></script>
