--- a/pages/redirect.html
+++ b/pages/redirect.html
@@ -10,7 +10,7 @@
       case 'android': 
         window.location.replace("http://play.google.com?id=*");
         break;
-      case 'iOS': 
+      case 'ios': 
         window.location.replace("https://appstore.com/");
         break;
       case 'windows':
